--- a/public/src/css/style.css
+++ b/public/src/css/style.css
@@ -139,7 +139,19 @@
 
 .screenResponsive {
     display: flex;
-    width: 600px;
+    align-items: center;
+}
+
+.reveal{
+  position: relative;
+  transform: translateY(150px);
+  opacity: 0;
+  transition: 1s all ease;
+}
+
+.reveal.active{
+  transform: translateY(0);
+  opacity: 1;
 }
 
 @media screen and (max-width: 480px) {
