--- a/public/src/css/style.css
+++ b/public/src/css/style.css
@@ -142,6 +142,15 @@
     align-items: center;
 }
 
+.mg-left {
+    margin-left: 20px;
+}
+
+.fullscreenview {
+    height: 100vh;
+    width:100%;
+}
+
 .reveal{
   position: relative;
   transform: translateY(150px);
@@ -158,6 +167,11 @@
     .screenResponsive {
     display: block;
     text-align: center;
+    margin: auto;
+    }
+
+    .mg-left {
+        margin-left: 0;
     }
 
     .font-custom {
